# pota

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  build_local.sh  build_server.sh  compile.txt  package.in.py  package.py  subdiv_atmosphere_bug.ass  todo.txt  uigen.py
bokeh_imgs/: example_bokeh_kernel.tx
build_old/local/: Makefile  build_local.sh
c4d/src/: ArnoldLentil.h  ArnoldLentilTranslator.cpp  ArnoldLentilTranslator.h
c4dtoa/: lentil_base_setup_c4dtoa.c4d
cmake/: FindArnold.cmake
dcc_base_scenes/: debug_log_htoa.txt  lentil_base_scene_mtoa_lights.ma  lentil_base_setup.c4d  lentil_base_setup.hiplc  lentil_base_setup.ma  lentil_base_setup_7.0.0.0_objectmotionblur_operatortest.hiplc  lentil_base_setup_new.c4d  lentil_base_setup_new.ma
dcc_base_scenes/backup/: lentil_base_setup_7.0.0.0_objectmotionblur_bak1.hiplc  lentil_base_setup_bak10.hiplc  lentil_base_setup_bak2.hiplc  lentil_base_setup_bak3.hiplc  lentil_base_setup_bak4.hiplc  lentil_base_setup_bak5.hiplc  lentil_base_setup_bak7.hiplc  lentil_base_setup_bak8.hiplc  lentil_base_setup_bak9.hiplc
dcc_specific_files/c4d/: lentil_base_setup.c4d
dcc_specific_files/houdini/: lentil_base_setup.hiplc  lentil_base_setup_7.0.0.0.hiplc  lentil_base_setup_7.0.0.0_objectmotionblur.hiplc
dcc_specific_files/maya/: lentil_base_setup.ma  lentil_base_setup_broken.ma  lentil_base_setup_broken_02.ma
houdini/: htoa_test.hip  lentil_houdini.py
htoa/: lentil_base_setup.hiplc
htoa/backup/: lentil_base_setup_bak1.hiplc
include/: CImg.h  init.h  lens.h  lt_sample_aperture.h  miniexr.h  pt_evaluate.h  pt_evaluate_aperture.h  pt_evaluate_aperture_jacobian.h  pt_evaluate_jacobian.h  pt_sample_aperture.h  tinyexr.h
include/auto_generated_lens_includes/: load_lens_constants.h  load_lt_sample_aperture.h  load_pt_evaluate.h  load_pt_evaluate_aperture.h  load_pt_evaluate_aperture_jacobian.h  load_pt_evaluate_jacobian.h  load_pt_sample_aperture.h  pota_cpp_lenses.h  pota_h_lenses.h
include/fitted_double_gauss/: init.h  lt_sample_aperture.h
include/fitted_double_gauss_angenieux/: lt_sample_aperture.h  pt_sample_aperture.h
include/fitted_double_gauss_angenieux_johannes/: pt_evaluate.h  pt_evaluate_jacobian.h
include/fitted_double_gauss_angenieux_self/: init.h  lt_sample_aperture.h  pt_evaluate.h  pt_evaluate_jacobian.h
include/fitted_fisheye_02/: init.h  lt_sample_aperture.h  pt_evaluate.h  pt_evaluate_aperture.h  pt_evaluate_aperture_jacobian.h  pt_evaluate_jacobian.h  pt_sample_aperture.h
include/fitted_fisheye_aspherical/: init.h  pt_evaluate.h  pt_sample_aperture.h
include/fitted_lensbaby_low_params/: init.h  pt_evaluate_aperture.h  pt_evaluate_aperture_jacobian.h
include/fitted_petzval/: pt_evaluate_jacobian.h  pt_sample_aperture.h
include/fitted_tessar_anamorphic/: init.h  lt_sample_aperture.h  pt_evaluate.h  pt_evaluate_aperture.h  pt_evaluate_aperture_jacobian.h  pt_evaluate_jacobian.h  pt_sample_aperture.h
include/fitted_wideangle/: init.h  lt_sample_aperture.h  pt_evaluate.h  pt_evaluate_aperture.h  pt_evaluate_aperture_jacobian.h  pt_evaluate_jacobian.h  pt_sample_aperture.h
ktoa/Args/: lentil.args  lentil_debug_operator.args  lentil_imager.args  lentil_operator.args  lentil_thinlens.args
ktoa/not_really_needed/: lentil_imager.args
makefile_prod/: Makefile
maya/ae/: aiLentilCameraTemplate.py  aiLentilTemplate.py  aiLentilThinlensTemplate.py  aiPotaTemplate.py
maya/ui/: lenses_public.json  userinterface.py
mtd/: lentil.mtd  lentil_thinlens.mtd
mtoa/: lentil_base_scene_mtoa_lights.ma
polynomialOptics/render/: lens.h  lt_sample_aperture.h  pt_evaluate.h  pt_evaluate_aperture.h  pt_evaluate_aperture_jacobian.h  pt_evaluate_jacobian.h  pt_sample_aperture.h
presentation_js/js/: lenses.js
preset_scenes/: lentil_base_setup.c4d  lentil_base_setup.hiplc  lentil_base_setup.ma
src/: CMakeLists.txt  Makefile  aov_data.h  autofocus.cpp  common.h  cuda_dummy_driver.cpp  cuda_dummy_driver.cu  evaluate.h  global.h  imagebokeh.h  lens.h  lentil.cpp  lentil.h  lentil.mtd  lentil.ui  lentil_bokeh_aov.cpp  lentil_bokeh_aov.mtd  lentil_bokeh_driver.cpp  lentil_bokeh_filter.cpp  lentil_camera.cpp  lentil_camera.ui  lentil_camera_po.cpp  lentil_camera_tl.cpp  lentil_debug_filter.cpp  lentil_debug_operator.cpp  lentil_extra.mtd  lentil_filter.cpp  lentil_filter_debug.cpp  lentil_filter_debug_operator.cpp  lentil_filter_po.cpp  lentil_filter_tl.cpp  lentil_imager.cpp  lentil_imager_debug.cpp  lentil_loader.cpp  lentil_operator.cpp  lentil_operator_debug.cpp  lentil_raytraced.cpp  lentil_setup.h  lentil_tag_transmissive.cpp  lentil_thin_lens_bokeh_cuda.cu  (+30 more)
src/auto_generated_lens_includes/: load_lens_constants.h  load_lt_sample_aperture.h  load_pt_evaluate.h  load_pt_evaluate_aperture.h  load_pt_evaluate_aperture_jacobian.h  load_pt_evaluate_jacobian.h  load_pt_sample_aperture.h  pota_cpp_lenses.h  pota_h_lenses.h
src/cuda_prototype/: Makefile  cuda_dummy_driver.cu  cuda_dummy_driver.h  lentil_thin_lens_bokeh_cuda.cu
src/deprecated/: lentil_bokeh_driver.cpp  lentil_glare_imager.cpp  lentil_operator.cpp  lentil_thin_lens_bokeh_driver.cpp
tests/: cornell.ass  distance.ass  draw.pota  draw.py  maya_draw.py  spheres.ass
tests/aberrations/: lightgrid.ass
tests/aperture_sampling_debug/: citylights_template01_driver.ass  lens_writeout.py  newton-w4.py  twolights.ass  twolights.ma  twolights_vertical.ass  writout.txt
tests/cuda/: lightgrid.ass  lightgrid_cuda.ass  sampledata.txt
tests/driver_dof/: comparison.ntp  comparison.ntp.autosave  test02.ass
tests/driver_sampling_equalisation/: driver_sampling_equalisation.ass
tests/po_bidir_debug/: po_bidir_debug.ass  po_bidir_debug_lights.ass  po_bidir_spheres_debug_position.txt
tests/statues/: lens_testScene.ass  lenstestchart.tx
tests/tl_redistribution_bug/: redistribution_bug.ass  redistribution_bug_merged_aov.ass  redistribution_bug_merged_aov_02.ass
unit_render/: citylights_template01.ass  citylights_template01_driver.ass  citylights_template01_filter.ass  testchart_template01.ass  testchart_template01_driver.ass
(+53 files in other folders)
